fix: overview and list item on mobile screen

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -42,7 +42,7 @@ body {
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  min-height: 160vh;
 }
 
 .container {
@@ -353,6 +353,12 @@ body {
   align-items: center;
   box-shadow: var(--line);
 }
+@media only screen and (max-width: 37.5em) {
+  .overview {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
 .overview__heading {
   font-size: 2.25rem;
   font-weight: 300;
@@ -370,6 +376,11 @@ body {
   margin-right: auto;
   display: flex;
 }
+@media only screen and (max-width: 37.5em) {
+  .overview__stars {
+    margin-right: 2rem;
+  }
+}
 .overview__icon-star, .overview__icon-location {
   width: 1.75rem;
   height: 1.75rem;
@@ -379,6 +390,11 @@ body {
   font-size: 1.2rem;
   display: flex;
   vertical-align: center;
+}
+@media only screen and (max-width: 37.5em) {
+  .overview__location {
+    margin-left: 2rem;
+  }
 }
 .overview__icon-location {
   margin-right: 0.5rem;
@@ -397,6 +413,7 @@ body {
 @media only screen and (max-width: 37.5em) {
   .overview__rating {
     padding: 0 1.5rem;
+    margin-right: 2rem;
   }
 }
 .overview__rating-average {
@@ -476,6 +493,11 @@ body {
 .list__item {
   flex: 0 0 50%;
   margin-bottom: 0.7rem;
+}
+@media only screen and (max-width: 37.5em) {
+  .list__item {
+    flex: 0 0 100%;
+  }
 }
 .list__item::before {
   content: "";
